--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -2,5 +2,6 @@
   <div class="block">
     <h1 class="font-bold text-4xl mb-4 text-center">Get Your Forecast</h1>
     <%= render "form" %>
+    <%= turbo_frame_tag :forecast %>
   </div>
 </div>
