--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-center w-full">
-  <div class="block">
+  <div class="block mx-20 w-full">
     <h1 class="font-bold text-4xl mb-4 text-center">Get Your Forecast</h1>
     <%= render "form" %>
     <%= turbo_frame_tag :forecast %>
