--- a/app/views/forecasts/_form.html.erb
+++ b/app/views/forecasts/_form.html.erb
@@ -1,14 +1,22 @@
 <%= form_with url: forecasts_url, method: :post,
               id: "forecast_form", autocomplete: :off,
-              data: { controller: "google-autocomplete",
-                      action: "init-map@window->google-autocomplete#initMap" } do |form| %>
-  <div class="flex">
+              data: { controller: "google-autocomplete form",
+                      action: "autocomplete-loaded@window->form#show" } do |form| %>
+  <div class="empty-state" data-form-target="loader">
+    <svg class="animate-spin -ml-1 mr-3 h-5 w-5 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+      <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+    </svg>
+  </div>
+  <div class="flex hidden" data-form-target="fields">
     <%= form.hidden_field :zipcode, data: { google_autocomplete_target: "zipcode" } %>
     <%= form.hidden_field :city, data: { google_autocomplete_target: "city" } %>
     <%= form.hidden_field :state, data: { google_autocomplete_target: "state" } %>
     <%= form.hidden_field :latitude, data: { google_autocomplete_target: "latitude" } %>
     <%= form.hidden_field :longitude, data: { google_autocomplete_target: "longitude" } %>
-    <%= form.text_field :address, data: { google_autocomplete_target: "search" } %>
-    <%= form.submit "Get Forecast", class: "bg-black text-white px-4" %>
+    <%= form.text_field :address, class: "rounded-l-md w-full px-4 py-3 border-1 border-gray-300 sm:text-sm focus:border-gray-300 focus:outline-none outline-none transition-all",
+                                  data: { google_autocomplete_target: "search" } %>
+    <%= form.submit "Get Forecast", class: "rounded-r-md bg-black text-white disabled:bg-gray-500 px-4", disabled: :disabled,
+                                    data: { google_autocomplete_target: "submitBtn" } %>
   </div>
 <% end %>
