--- a/app/views/forecasts/_forecast.html.erb
+++ b/app/views/forecasts/_forecast.html.erb
@@ -21,5 +21,8 @@
         </div>
       <% end %>
     </div>
+    <% if cached %>
+      <div class="text-end text-white my-3 italic">Cached</div>
+    <% end %>
   </div>
 <% end %>
