--- a/app/views/forecasts/create.turbo_stream.erb
+++ b/app/views/forecasts/create.turbo_stream.erb
@@ -1,3 +1,4 @@
 <%= turbo_stream.replace :forecast, partial: "forecast",
                                     locals: { extended_forecast: @extended_forecast,
-                                              today: @extended_forecast.forecasts.first } %>
+                                              today: @extended_forecast.forecasts.first,
+                                              cached: @cached } %>
