--- a/app/views/forecasts/new.html.erb
+++ b/app/views/forecasts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="flex justify-center w-full">
   <div class="block mx-20 w-full">
-    <h1 class="font-bold text-4xl mb-4 text-center">Get Your Forecast</h1>
+    <h1 class="font-bold text-4xl mb-4 text-center">iWeather</h1>
     <%= render "form" %>
     <%= turbo_frame_tag :forecast %>
   </div>
